LPS-149028 portal-impl: use Streams where possible
https://issues.liferay.com/browse/LPS-149028